Bug 131729 - IMAGE WRAP: Crash if you wrap an image with vertical position "Bottom + Page text area"
Summary: IMAGE WRAP: Crash if you wrap an image with vertical position "Bottom + Page ...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha0+
Hardware: All All
: high major
Assignee: Miklos Vajna
URL:
Whiteboard: target:7.0.0 target:6.4.4
Keywords: bibisected, bisected, regression
: 132823 (view as bug list)
Depends on:
Blocks: Writer-Images
  Show dependency treegraph
 
Reported: 2020-03-31 06:26 UTC by Dieter
Modified: 2021-07-27 07:50 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
example document after step 4 (984.82 KB, application/vnd.oasis.opendocument.text)
2020-04-01 06:55 UTC, Dieter
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dieter 2020-03-31 06:26:28 UTC
I've detected this, while working on bug 131640

Steps to reproduce

1. Create a text that fulfill two pages with the same paragraph.
2. Insert two images, both anchored to the first paragraph (or to the first letter of the first page).
3. Set vertical position for both figures as "bottom" respect "page text area"
4. For first image uncheck "Allow overlap"
5. For first image set "None" in Wrap

LO crashes

Version: 7.0.0.0.alpha0+ (x64)
Build ID: 1c9ced04189c9d23ffea05d5570960b54b05ef28
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win; Locale: de-DE (de_DE); UI-Language: en-GB
Calc: CL
Comment 1 jose.velez 2020-03-31 07:31:21 UTC
I can conform some LO crashes when using "Bottom+PageTextArea+None Wrap+No overlap", but it doesn't occur always.
Comment 2 Dieter 2020-03-31 07:37:10 UTC
(In reply to jose.velez from comment #1)
> I can conform some LO crashes when using "Bottom+PageTextArea+None Wrap+No
> overlap", but it doesn't occur always.

=> NEW
Comment 3 Xisco Faulí 2020-03-31 10:24:41 UTC
Hi Dieter, Jose,
Would it be possible to attach a document up to step 4 ?
Comment 4 Dieter 2020-04-01 06:55:55 UTC
Created attachment 159209 [details]
example document after step 4

This time I haven't recieved a crash. Indeed only sometimes reproducible.
Comment 5 Xisco Faulí 2020-04-06 16:28:42 UTC
I can't reproduce it in

Version: 7.0.0.0.alpha0+
Build ID: 6c7d51643634a4a4111f673760567e10e48467d0
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3; 
Locale: ja-JP (en_US.UTF-8); UI-Language: en-US
Calc: threaded

a screencast would be helpful
Comment 6 Telesto 2020-04-18 18:14:30 UTC
(In reply to Xisco Faulí from comment #5)
> I can't reproduce it in
> a screencast would be helpful

Indeed
Comment 7 Telesto 2020-04-18 20:10:20 UTC
Hijacking...
1. Open attachment 159209 [details]
2. Right click the right the right image and select anchor to character 
3. Right click the lift image and select anchor to character
4. Drag the left image somewhere -> Crash

swlo!SwFrame::getIDocumentDrawModelAccess
Comment 8 Telesto 2020-04-18 20:26:47 UTC
5. Restart/ don't sent the crash report
6. Recover file..
7. Press Finish -> Crash again

SwFrame::getIDocumentDrawModelAccess+0x3940:
Comment 9 Xisco Faulí 2020-04-20 09:54:46 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=a5698f1a0fb8bf8775f1a098ae9ee09de968d632

author	Miklos Vajna <vmiklos@collabora.com>	2019-09-24 17:04:21 +0200
committer	Miklos Vajna <vmiklos@collabora.com>	2019-09-24 18:45:40 +0200
commit a5698f1a0fb8bf8775f1a098ae9ee09de968d632 (patch)
tree f9577d72b0e91bb7bf63c2d05ea4e24937db7411
parent 75923e132479b64320f78c6913e5d7241c69ad26 (diff)
Related: tdf#124600 sw anchored object allow overlap: add ODT filter

Bisected with: bibisect-linux64-6.4

Adding Cc: to Miklos Vajna
Comment 10 Commit Notification 2020-04-28 07:04:09 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4ba1909f12b49f020195b5e767045340717ce6df

tdf#131729 sw: handle no drawing objects when calculating overlap of objects

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2020-04-28 08:29:59 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/e1dd961e46a016f2641a96d5632757c8db4b1953

tdf#131729 sw: handle no drawing objects when calculating overlap of objects

It will be available in 6.4.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Xisco Faulí 2020-04-28 09:23:33 UTC
Verified in

Version: 7.0.0.0.alpha0+
Build ID: 4ba1909f12b49f020195b5e767045340717ce6df
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded

@Miklos, thanks for fixing this issue!!
Comment 13 Aron Budea 2020-05-09 03:39:19 UTC
*** Bug 132823 has been marked as a duplicate of this bug. ***