tdf#131729 sw: handle no drawing objects when calculating overlap of objects

Regression from commit d37096f59e7e0286e55008153591a60bab92b9e8
(Related: tdf#124600 sw anchored object allow overlap: add layout,
2019-09-19), we assumed that the anchor frame always has draw objects,
but that may not be the case.

That happens when dragging a to-character anchored object around, before
the object is added to its anchor.

(cherry picked from commit 4ba1909f12b49f020195b5e767045340717ce6df)

Change-Id: I1271a6e498553838c3851864b7965a1ba28de663